--- a/randomizer.ui
+++ b/randomizer.ui
@@ -436,6 +436,9 @@
             <property name="text">
              <string>Unlock boss doors</string>
             </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
          </layout>
