Add option to always have dowsing effect in OoE

--- a/randomizer.ui
+++ b/randomizer.ui
@@ -485,6 +485,13 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QCheckBox" name="always_dowsing">
+            <property name="text">
+             <string>Always have Dowsing Hat effect</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
