--- a/randomizer.ui
+++ b/randomizer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>613</height>
+    <height>619</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -71,6 +71,13 @@
           <widget class="QPushButton" name="output_folder_browse_button">
            <property name="text">
             <string>Browse</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="2">
+          <widget class="QPushButton" name="generate_seed_button">
+           <property name="text">
+            <string>New seed</string>
            </property>
           </widget>
          </item>
