Add "Custom" option, save difficulty settings

--- a/randomizer.ui
+++ b/randomizer.ui
@@ -556,7 +556,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="difficulty_preset"/>
+          <widget class="QComboBox" name="difficulty_level"/>
          </item>
         </layout>
        </item>
